# DevVNC-Hub

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.env.example
devvnc/: __init__.py  cli.py  config.py  server.py
docs/: QUICKSTART.md
scripts/: dev-vnc-server.sh  install.sh
tests/: __init__.py  test_server.py
